--- a/templates.html
+++ b/templates.html
@@ -25,13 +25,13 @@
     </div>
     <main class="cont">
         <div class="cont" id="boxes">
-            <a onclick="ShowPopup(1)" class="box">
+            <a onclick="ShowPopup(1)" class="box" style="width: 100px; height: 100px">
                 <img class="inner" src="">
             </a>
-            <a onclick="ShowPopup(3)" class="box">
+            <a onclick="ShowPopup(3)" class="box"  style="width: 100px; height: 100px">
                 <img class="inner" src="">
             </a>
-            <a onclick="ShowPopup(2)" class="box">
+            <a onclick="ShowPopup(2)" class="box"  style="width: 100px; height: 100px">
                 <img class="inner" src="">
             </a>
         </div>
