--- a/templates.html
+++ b/templates.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./style/colors.css" rel="stylesheet">
-    <link href="./style/objects.css" rel="stylesheet">
+    <link href="./style/colors.css" rel="stylesheet" type="text/css">
+    <link href="./style/objects.css" rel="stylesheet" type="text/css">
     <title>Template</title>
 </head>
 <body>
-    <script type="text/javascript">
+    <script type="application/javascript">
         function ShowPopup(img_num) {
             pppc = document.getElementById("popup-cont")/*PoPuP Container - PPPC*/
             pppc.classList.remove("hidden");
@@ -36,7 +36,7 @@
             </a>
         </div>
     </main>
-    <script src="./imageList.js" type="text/javascript"></script>
-    <script src="./imagePicker3000.js" type="text/javascript"></script>
+    <script src="./imageList.js" type="application/javascript"></script>
+    <script src="./imagePicker3000.js" type="application/javascript"></script>
 </body>
 </html> 
